--- a/public/css/adminlogin.css
+++ b/public/css/adminlogin.css
@@ -98,4 +98,13 @@ body {
     /* background-image: var(--lin-grad); */
     background: #271a4e;
 }
-
+.card img {
+    width: 100%;
+    height: 200px;
+}
+.card:hover {
+    box-shadow: 0px 0px 20px;
+}
+.card-body{
+    padding-top: 0px;
+}
